--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+    <string name="login_page">Login Page</string>
+    <string name="todo">TODO</string>
+    <string name="username">Username</string>
 </resources>
